# Flat-Panel-Rotator-LED-Controller-for-Astrophotography

./: ASCOMFlatPanel.cs  CMakeLists.txt  FlatPanelControl.cs  FlatPanelController.ino  IndiFlatPanel.cpp  README.md  ascom_flatfield.cs  flatfield_driver.cpp  flatfield_driver.h  flatfield_driver.xml.in  flatpanelgui.py  indi_flatfield.cpp
ArduinoProgram/: FlatFieldPanel.ino  RotationPanel.ino  flatpanelcontrollerArduino.ino
GUIapplication/: flatpanelcontrollerGUI.py  gui.py  guiadv.py
KSTARScontrol/: kstars_control.py
indiDriver/: CMakeLists.txt  Makefile  RotationPanel.cpp  RotationPanel.h  build_driver.sh  flatpanelcontrollerINDI.cpp  indi_flatfield.cpp  indi_simpleflat.cpp
